mouse events for desktop

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-	#page(data-role='page')
+	#page(data-role='page',style="background-image : none;background-color:blue")
 		div(style="margin-left: 60px;")
 			a#forward(href='#', data-role='button', data-inline='true', data-theme='b') Forward
 		br
