--- a/views/index.jade
+++ b/views/index.jade
@@ -2,15 +2,16 @@ extends layout
 
 block content
 	#page(data-role='page',style="background-image : none;background-color:blue")
-		div(style="margin-left: 60px;")
+		div(style="margin-left: 80px;")
 			a#forward(href='#', data-role='button', data-inline='true', data-theme='b') Forward
 		br
 		div
 			a#left(href='#', data-role='button', data-inline='true', data-theme='b') Left
-			select#led(name='led', data-role='slider')
-				option(value='off') Off
-				option(value='on') On	
+			span(style="margin-left: 20px;margin-right: 20px;")
+				select#led(name='led', data-role='slider')
+					option(value='off') Off
+					option(value='on') On	
 			a#right(href='#', data-role='button', data-inline='true', data-theme='b') Right
 		br
-		div(style="margin-left: 80px;")
+		div(style="margin-left: 94px;")
 			a#back(href='#', data-role='button', data-inline='true', data-theme='b') Back
